using ghcr.io docker and oras repositories

--- a/.github/workflows/singularity-publish.yml
+++ b/.github/workflows/singularity-publish.yml
@@ -27,7 +27,7 @@ jobs:
 
     runs-on: ubuntu-latest
     container:
-      image: quay.io/singularity/singularity:v3.8.3
+      image: ghcr.io/truatpasteurdotfr/docker-c7-singularity-builder:main
       options: --privileged
     permissions:
       contents: read
@@ -47,7 +47,6 @@ jobs:
             echo "keepgoing=true" >> $GITHUB_ENV
           fi          
 
-
       - name: Build Container
         if: ${{ env.keepgoing == 'true' }}
         env:
@@ -55,7 +54,7 @@ jobs:
         run: |
          ls 
          if [ -f "${{ matrix.recipe }}" ]; then
-            sudo -E singularity build container.sif ${{ matrix.recipe }}
+            singularity build container.sif ${{ matrix.recipe }}
             tag=$(echo "${recipe/Singularity\./}")
             if [ "$tag" == "Singularity" ]; then
                 tag=latest
